Update composer.json to change name option

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bolt/previewlink",
+    "name": "nestordedios/previewlink",
     "description": "Create public preview links.",
     "type": "bolt-extension",
     "keywords": [
