Fix wrong spelling of extra option

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         }
     },
     "extra": {
-        "web-assets": "web",
+        "bolt-assets": "web",
         "bolt-class": "Bolt\\Extension\\Bolt\\PreviewLink\\PreviewLinkExtension"
     }
 }
